--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel=stylesheet href="styles/normalize.css" type="text/css" media=screen>
+    <link rel=StyleSheet href="styles/style.css" type="text/css" media=screen>
   </head>
   <body>
     <div>
