--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link href="normalize.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <div class="container">
 
 
       <nav>
