--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <LINK REL=StyleSheet HREF="styles/normalize.css" TYPE="text/css" MEDIA=screen>
+    <LINK REL=StyleSheet HREF="styles/style.css" TYPE="text/css" MEDIA=screen>
+
   </head>
   <body>
     <div>
@@ -23,14 +26,14 @@
       </nav>
 
 
-      <section>
+      <section class="welcome">
         <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
+        <sub class="tagline">A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote1">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,7 +43,7 @@
       </section>
 
 
-      <section>
+      <section class= "content">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -68,7 +71,7 @@
       </section>
 
 
-      <section>
+      <section class="quote2">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -78,7 +81,7 @@
       </section>
 
 
-      <section>
+      <section class="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -110,7 +113,7 @@
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
