--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/normalize.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/index.css" />
   </head>
-  <body>
-    <div>
+  <body class="pagecontainer">
+    <div class="container">
 
 
       <nav>
