--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       </nav>
 
 
-      <section>
+      <header>
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
-      </section>
+      </header>
 
 
       <section>
