added link to normalize.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <LINK REL=StyleSheet HREF="normalize.css" TYPE="text/css" MEDIA=screen>
   </head>
   <body>
     <div>
