added styles.css and link to it

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Startrly</title>
     <LINK REL=StyleSheet HREF="normalize.css" TYPE="text/css" MEDIA=screen>
+    <LINK REL=StyleSheet HREF="styles.css" TYPE="text/css" MEDIA=screen>
   </head>
   <body>
     <div>
