added styles link to index

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
   </head>
   <body>
-    <div>
-
-
+    <div class="main-container">
       <nav>
         <ul>
           <li>
@@ -165,7 +164,6 @@
           </ul>
         </div>
       </section>
-
     </div>
   </body>
 </html>
