basic styling for "why" and "team" sections

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div>
@@ -40,7 +42,7 @@
       </section>
 
 
-      <section>
+      <section id="why"> 
         <h2>Why?</h2>
         <ul>
           <li>
@@ -78,7 +80,7 @@
       </section>
 
 
-      <section>
+      <section id="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
