Added normalize and google fonts

--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|PT+Mono" rel="stylesheet">
   </head>
   <body>
     <div>
 
 
-      <nav>
+      <nav class="nav-container">
         <ul>
-          <li>
+          <li class="startrly">
             Startrly
           </li>
-          <li>
+          <li class="try">
             Try Now!
           </li>
-          <li>
+          <li class="about">
             About
           </li>
         </ul>
