define the grid for the body

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <LINK REL=StyleSheet HREF="style/style.css" TYPE="text/css" MEDIA=screen>
+    <LINK REL=StyleSheet HREF="style/normalize.css" TYPE="text/css" MEDIA=screen>
   </head>
-  <body>
+  <body class="container">
     <div>
 
 
-      <nav>
-        <ul>
-          <li>
+      <nav class="nav">
+        <ul id="navlink">
+          <li id="startrly">
             Startrly
           </li>
           <li>
@@ -23,14 +25,14 @@
       </nav>
 
 
-      <section>
+      <section class="content">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="content">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
