--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 
       <nav>
         <ul>
-          <li>
+          <li id="startrly-logo">
             Startrly
           </li>
-          <li>
+          <li id="try">
             Try Now!
           </li>
-          <li>
+          <li id="about">
             About
           </li>
         </ul>
       </nav>
 
 
-      <section>
+      <section id = "splash">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote" id="mx-lorem">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -112,7 +112,7 @@
       </section>
 
 
-      <section>
+      <section id="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
