Format site-intro

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
 
-    <section>
+    <section id="site-intro">
       <h1>Startrly</h1>
       <sub>A catchy tagline for a great solution</sub>
       <a href="#">Some Call to Action</a>
