aligned nav and introductory blocks

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       </nav>
 
 
-      <header>
+      <section class="welcome">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
-      </header>
+      </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -39,7 +39,7 @@
       </section>
 
 
-      <section>
+      <section class="why-startrly">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -67,7 +67,7 @@
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -77,7 +77,7 @@
       </section>
 
 
-      <section>
+      <section class="meet-team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -109,7 +109,7 @@
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -130,8 +130,7 @@
         </ul>
       </section>
 
-
-      <section>
+      <section class="support">
         <div>
           <h3>Support</h3>
           <ul>
@@ -149,7 +148,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <section class="footer">
           <h3>About</h3>
           <ul>
             <li>
@@ -162,7 +161,7 @@
               Get in Touch
             </li>
           </ul>
-        </div>
+        </section>
       </section>
     </div>
   </body>
