--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel=StyleSheet href="styles/normalize.css" type="text/css" media=screen>
+    <link rel=StyleSheet href="styles/style.css" type="text/css" media=screen>
   </head>
   <body>
-    <div>
+    <div class="container">
 
 
       <nav>
