--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </section>
 
 
-    <section>
+    <section class="quote">
       <blockquote>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua.
       </blockquote>
-      <p>
+      <p class="author">
         Mx. Lorem
       </p>
     </section>
@@ -75,12 +75,12 @@
     </section>
 
 
-    <section>
+    <section class="quote">
       <blockquote>
         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
         eos qui ratione voluptatem sequi nesciunt.
       </blockquote>
-      <p>
+      <p class="author">
         Mx. Ipsum
       </p>
     </section>
