--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/normalize.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
   </head>
   <body>
-    <div>
-
+    <div class="container">
 
       <nav>
         <ul>
@@ -23,14 +25,14 @@
       </nav>
 
 
-      <section>
+      <section class="welcome">
         <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
+        <p>A catchy tagline for a great solution</p>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="testimonial">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,7 +42,7 @@
       </section>
 
 
-      <section>
+      <section class="why">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -68,7 +70,7 @@
       </section>
 
 
-      <section>
+      <section class="testimonial">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -78,39 +80,39 @@
       </section>
 
 
-      <section>
+      <section class="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
+            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" /><br>
+            <span>Kari Kiwi</span><br>
             <span>CFO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
+            <img src="https://placebear.com/150/150" alt="profile for dan dragon" /><br>
+            <span>Dan Dragon</span><br>
             <span>CMO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
+            <img src="https://placebear.com/150/150" alt="profile for chris caribou" /><br>
+            <span>Chris Caribou</span><br>
             <span>CIO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
+            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" /><br>
+            <span>Charles Cheetah</span><br>
             <span>Board Member, CTO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
+            <img src="https://placebear.com/150/150" alt="profile for dee dugong" /><br>
+            <span>Dee Dugong</span><br>
             <span>Startup Enthusiast</span>
           </li>
         </ul>
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -132,7 +134,7 @@
       </section>
 
 
-      <section>
+      <footer>
         <div>
           <h3>Support</h3>
           <ul>
@@ -164,7 +166,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </footer>
 
     </div>
   </body>
