complete up to sponsors

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="normalize.css">  
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
   </head>
   <body>
     <div>
 
 
       <nav>
-        <ul>
+        <ul class="top-menu">
           <li>
             Startrly
           </li>
@@ -23,24 +25,24 @@
       </nav>
 
 
-      <section>
+      <section class="section-header">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="section-quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
-        <p>
+        <p class="quote-signature">
           Mx. Lorem
         </p>
       </section>
 
 
-      <section>
+      <section class="section-why">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -68,17 +70,17 @@
       </section>
 
 
-      <section>
+      <section class="section-quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
-        <p>
+        <p class="quote-signature">
           Mx. Ipsum
         </p>
       </section>
 
 
-      <section>
+      <section class="section-team">
         <h2>Meet the team</h2>
         <ul>
           <li>
