--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
       <div class="container">
         <div class="top-nav-bar">
-          <nav>
+          <nav class="navigation">
             <ul>
               <li>
                 Startrly
@@ -25,14 +25,14 @@
           </nav>
         </div>
         <div class="title-section">
-          <section>
+          <section class="title">
             <h1>Startrly</h1>
             <sub>A catchy tagline for a great   solution</sub>
             <a href="#">Some Call to Action</a>
           </section>
         </div>
         <div class="top-quote-block">
-          <section>
+          <section ID="quote-one">
             <blockquote>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </blockquote>
@@ -42,7 +42,7 @@
           </section>
         </div>
         <div class="why-company-section">
-          <section>
+          <section class="about-company">
             <h2>Why?</h2>
             <ul>
               <li>
@@ -70,7 +70,7 @@
           </section>
         </div>
         <div class="second-quote-block">
-          <section>
+          <section ID="quote-two">
             <blockquote>
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
             </blockquote>
@@ -80,7 +80,7 @@
           </section>
         </div>
         <div class="meet-team">
-          <section>
+          <section class="team">
             <h2>Meet the team</h2>
             <ul>
               <li>
@@ -112,7 +112,7 @@
           </section>
         </div>
         <div class="all-sponsors-section">
-          <section>
+          <section class="sponsors">
             <h2>Sponsors</h2>
             <ul>
               <li>
@@ -134,8 +134,8 @@
           </section>
         </div>
         <div class="bottom-information">
-          <section>
-            <div>
+          <section class="support-and-about">
+            <div class="support">
               <h3>Support</h3>
               <ul>
                 <li>
@@ -152,7 +152,7 @@
                 </li>
               </ul>
             </div>
-            <div>
+            <div class="about">
               <h3>About</h3>
               <ul>
                 <li>
