--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Startrly</title>
-    <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Libre+Baskerville" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div>
-
-
       <nav>
         <ul>
-          <li id="startrly-logo">
+          <li id="startrly-logo" class="startrly-name">
             Startrly
           </li>
           <li id="try">
@@ -26,7 +27,7 @@
 
 
       <section id = "splash">
-        <h1>Startrly</h1>
+        <h1 class="startrly-name">Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
@@ -70,7 +71,7 @@
       </section>
 
 
-      <section>
+      <section class="quote" id="mx-ipsum">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
