--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <LINK REL=StyleSheet HREF="normalize.css" TYPE="text/css" MEDIA=screen>
+    <LINK REL=StyleSheet HREF="styles.css" TYPE="text/css" MEDIA=screen>
   </head>
   <body>
     <div>
@@ -30,7 +32,7 @@
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -68,7 +70,7 @@
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -110,7 +112,7 @@
       </section>
 
 
-      <section>
+      <section class="team">
         <h2>Sponsors</h2>
         <ul>
           <li>
