--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -11,40 +11,40 @@
 
 
       <nav>
-        <ul>
-          <li>
+        <ul class= nav_row>
+          <li class= "nav_elem">
             Startrly
           </li>
-          <li>
+          <li class= "nav_elem_2">
             Try Now!
           </li>
-          <li>
+          <li class= nav_elem_3>
             About
           </li>
         </ul>
       </nav>
 
 
-      <section>
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+      <section class= "header">
+        <h1 class= "title">Startrly</h1>
+        <sub class= "tagline">A catchy tagline for a great solution</sub>
+        <a class= "taglink" href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
-        <blockquote>
+      <section class= "quote_block">
+        <blockquote class= "quote">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
-        <p>
+        <p class= "quote_author">
           Mx. Lorem
         </p>
       </section>
 
 
       <section>
-        <h2>Why?</h2>
-        <ul>
+        <h2 class= "section_header">Why?</h2>
+        <ul class= "why-boxes">
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
@@ -70,18 +70,18 @@
       </section>
 
 
-      <section>
-        <blockquote>
+      <section  class= "quote_block">
+        <blockquote class= "quote">
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
-        <p>
+        <p class= "quote_author">
           Mx. Ipsum
         </p>
       </section>
 
 
       <section>
-        <h2>Meet the team</h2>
+        <h2 class= "section_header">Meet the team</h2>
         <ul>
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
@@ -113,7 +113,7 @@
 
 
       <section>
-        <h2>Sponsors</h2>
+        <h2 class= "section_header">Sponsors</h2>
         <ul>
           <li>
             <img src="http://via.placeholder.com/300x100" />
