--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
       <nav>
         <ul>
-          <li>
+          <li id="startrly">
             Startrly
           </li>
-          <li>
+          <li id="trynow">
             Try Now!
           </li>
-          <li>
+          <li id="about">
             About
           </li>
         </ul>
