--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body>
+  <body >
     <div>
       <nav>
         <ul>
@@ -26,7 +26,7 @@
       </nav>
 
 
-      <section id = "splash">
+      <section id = "splash" class="parallax">
         <h1 class="startrly-name">Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
@@ -44,7 +44,7 @@
 
 
       <section id="why"> 
-        <h2>Why?</h2>
+        <h2 class="section-header">Why?</h2>
         <ul>
           <li>
             <img src="http://via.placeholder.com/100x100" />
@@ -82,7 +82,7 @@
 
 
       <section id="team">
-        <h2>Meet the team</h2>
+        <h2 class="section-header">Meet the team</h2>
         <ul>
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
@@ -114,7 +114,7 @@
 
 
       <section id="sponsors">
-        <h2>Sponsors</h2>
+        <h2 class="section-header">Sponsors</h2>
         <ul>
           <li>
             <img src="http://via.placeholder.com/300x100" />
