--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
       </section>
 
 
-      <section>
-        <div>
+      <section id="footer">
+        <div class="footer-links">
           <h3>Support</h3>
           <ul>
             <li>
@@ -153,7 +153,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="footer-links">
           <h3>About</h3>
           <ul>
             <li>
