--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|PT+Mono" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <div class="container">
 
-
-      <nav class="nav-container">
+      <nav class="nav">
         <ul>
           <li class="startrly">
             Startrly
@@ -26,14 +25,14 @@
       </nav>
 
 
-      <section>
+      <section class="tagline">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote1">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -43,7 +42,7 @@
       </section>
 
 
-      <section>
+      <section class="why">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -71,7 +70,7 @@
       </section>
 
 
-      <section>
+      <section class="quote2">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -81,7 +80,7 @@
       </section>
 
 
-      <section>
+      <section class="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -113,7 +112,7 @@
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -135,7 +134,7 @@
       </section>
 
 
-      <section>
+      <section class="footer">
         <div>
           <h3>Support</h3>
           <ul>
