--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
 
 
-      <section>
+      <section class="testimonial">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -70,7 +70,7 @@
       </section>
 
 
-      <section>
+      <section class="testimonial">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
