--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </li>
           </ul>
         </div>
-        <section class="footer">
+        <section class="about">
           <h3>About</h3>
           <ul>
             <li>
