added format for header, nav, begining why boxes

--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -44,25 +44,25 @@
 
       <section>
         <h2 class= "section_header">Why?</h2>
-        <ul class= "why-boxes">
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Comfortable</strong>
-            <p>
+        <ul class= "why_boxes">
+          <li class= "why_box">
+            <img class= "why_img" src="http://via.placeholder.com/100x100" />
+            <strong class= "why_title">Comfortable</strong>
+            <p class= "why_desc">
               Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
             </p>
           </li>
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Robust</strong>
-            <p>
+          <li class= "why_box">
+            <img class= "why_img" src="http://via.placeholder.com/100x100" />
+            <strong class= "why_title">Robust</strong>
+            <p class= "why_desc">
               At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
             </p>
           </li>
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Convenient</strong>
-            <p>
+          <li class= "why_box"> 
+            <img class= "why_img" src="http://via.placeholder.com/100x100" />
+            <strong class= "why_title">Convenient</strong>
+            <p class= "why_desc"> 
               Itaque earum rerum hic tenetur a sapiente delectus.
             </p>
           </li>
