started refactoring css and also the sponsors are dogs now

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width">
     <title>Startrly</title>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Libre+Baskerville" rel="stylesheet">
-
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
@@ -47,21 +46,21 @@
         <h2 class="section-header">Why?</h2>
         <ul>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
+            <img src="http://www.placekitten.com/100/100" />
             <strong>Comfortable</strong>
             <p>
               Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
             </p>
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
+            <img src="http://www.placekitten.com/100/100" />
             <strong>Robust</strong>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
             </p>
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
+            <img src="http://www.placekitten.com/100/100" />
             <strong>Convenient</strong>
             <p>
               Itaque earum rerum hic tenetur a sapiente delectus.
@@ -117,19 +116,19 @@
         <h2 class="section-header">Sponsors</h2>
         <ul>
           <li>
-            <img src="http://via.placeholder.com/300x100" />
+            <img src="http://www.placepuppy.net/300/100" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/250x125" />
+            <img src="http://www.placepuppy.net/250/125" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/275x70" />
+            <img src="http://www.placepuppy.net/275/70" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/250x120" />
+            <img src="http://www.placepuppy.net/250/120" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/220x100" />
+            <img src="http://www.placepuppy.net/220/100" />
           </li>
         </ul>
       </section>
