Laid out remaining sections, styled links on hover, added bg color for intro, used Google fonts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Ubuntu:bold'>
+    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Nunito'>
     <link rel="stylesheet" type="text/css" href="styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </head>
