meet team radius and grid alignment set

--- a/index.html
+++ b/index.html
@@ -80,27 +80,27 @@
       <section class="meet-team">
         <h2>Meet the team</h2>
         <ul>
-          <li>
+          <li class="a">
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
             <span>CFO</span>
           </li>
-          <li>
+          <li class="b">
             <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
             <span>Dan Dragon</span>
             <span>CMO</span>
           </li>
-          <li>
+          <li class="c">
             <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
             <span>Chris Caribou</span>
             <span>CIO</span>
           </li>
-          <li>
+          <li class="d">
             <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
             <span>Charles Cheetah</span>
             <span>Board Member, CTO</span>
           </li>
-          <li>
+          <li class="e">
             <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
             <span>Dee Dugong</span>
             <span>Startup Enthusiast</span>
