--- a/index.html
+++ b/index.html
@@ -1,63 +1,66 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Pathway+Gothic+One|Quicksand" rel="stylesheet">
+    <link href="styles/normalize.css" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Startrly</title>
   </head>
   <body>
-    <div>
+    <div class="grid-container">
 
 
       <nav>
-        <ul>
-          <li>
+        <ul class="top-nav">
+          <li id="title">
             Startrly
           </li>
-          <li>
+          <li id="try-now">
             Try Now!
           </li>
-          <li>
+          <li id="about">
             About
           </li>
         </ul>
       </nav>
 
 
-      <section>
+      <section class="home-container">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+        <a id="call-action" href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
-        <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      <section class="quote-grid">
+        <blockquote class="quote">
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
         </blockquote>
-        <p>
-          Mx. Lorem
+        <p class="author">
+          --Mx. Lorem
         </p>
       </section>
 
 
-      <section>
-        <h2>Why?</h2>
-        <ul>
-          <li>
+      <section class="why-grid">
+        <h2 id="why-element">Why?</h2>
+        <ul class="images-container">
+          <li class="image-item">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
             <p>
               Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
             </p>
           </li>
-          <li>
+          <li class="image-item">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Robust</strong>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
             </p>
           </li>
-          <li>
+          <li class="image-item">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Convenient</strong>
             <p>
@@ -68,40 +71,40 @@
       </section>
 
 
-      <section>
-        <blockquote>
+      <section class="quote-grid">
+        <blockquote class="quote">
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
-        <p>
+        <p class="author">
           Mx. Ipsum
         </p>
       </section>
 
 
-      <section>
-        <h2>Meet the team</h2>
-        <ul>
-          <li>
+      <section class="meet-team-grid">
+        <h2 id="meet-team">Meet the team</h2>
+        <ul class="team-members">
+          <li id="team-1">
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
             <span>CFO</span>
           </li>
-          <li>
+          <li id="team-2">
             <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
             <span>Dan Dragon</span>
             <span>CMO</span>
           </li>
-          <li>
+          <li id="team-3">
             <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
             <span>Chris Caribou</span>
             <span>CIO</span>
           </li>
-          <li>
+          <li id="team-4">
             <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
             <span>Charles Cheetah</span>
             <span>Board Member, CTO</span>
           </li>
-          <li>
+          <li id="team-5">
             <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
             <span>Dee Dugong</span>
             <span>Startup Enthusiast</span>
@@ -110,9 +113,9 @@
       </section>
 
 
-      <section>
-        <h2>Sponsors</h2>
-        <ul>
+      <section class="sponsors-grid">
+        <h2 id="sponsors">Sponsors</h2>
+        <ul class="sponsors-container">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -132,8 +135,8 @@
       </section>
 
 
-      <section>
-        <div>
+      <section class="footer">
+        <div class="support">
           <h3>Support</h3>
           <ul>
             <li>
@@ -150,7 +153,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="about">
           <h3>About</h3>
           <ul>
             <li>
