Clean up blockquotes and autor sections

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </section>
 
 
-      <section>
+      <section class="selling-points">
         <h2>Why?</h2>
         <ul>
           <li>
