--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="styles/normalize.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400i" rel="stylesheet">
+    
   </head>
   <body>
     <div class="container">
@@ -28,16 +30,16 @@
       <section class="welcome">
         <h1>Startrly</h1>
         <p>A catchy tagline for a great solution</p>
-        <a href="#">Some Call to Action</a>
+        <a class="button" href="#">Some Call to Action</a>
       </section>
 
 
       <section class="testimonial">
         <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.""
         </blockquote>
         <p>
-          Mx. Lorem
+          -Mx. Lorem
         </p>
       </section>
 
@@ -47,24 +49,30 @@
         <ul>
           <li>
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Comfortable</strong>
-            <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-            </p>
+            <div>
+              <strong>Comfortable</strong>
+              <p>
+                Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+              </p>
+            </div>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
+            <div>
             <strong>Robust</strong>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
             </p>
+            </div>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
+            <div>
             <strong>Convenient</strong>
             <p>
               Itaque earum rerum hic tenetur a sapiente delectus.
             </p>
+            </div>
           </li>
         </ul>
       </section>
@@ -72,10 +80,10 @@
 
       <section class="testimonial">
         <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+          "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.""
         </blockquote>
         <p>
-          Mx. Ipsum
+          -Mx. Ipsum
         </p>
       </section>
 
