--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </ul>
           </section>
         </div>
-        <div class="bottom-information">
+        <!-- <div class="bottom-information"> -->
           <section class="support-and-about">
             <div class="support">
               <h3>Support</h3>
@@ -167,7 +167,7 @@
               </ul>
             </div>
           </section>
-        </div>
+        <!-- </div> -->
       </div>
     </div>
   </body>
