fixed the quote sections placing, working on the why section

--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
-    <LINK REL=StyleSheet HREF="style/style.css" TYPE="text/css" MEDIA=screen>
     <LINK REL=StyleSheet HREF="style/normalize.css" TYPE="text/css" MEDIA=screen>
+    <LINK REL=StyleSheet HREF="style/style.css" TYPE="text/css" MEDIA=screen>
   </head>
-  <body class="container">
-    <div>
+  <body >
+    <div class="container">
 
 
       <nav class="nav">
-        <ul id="navlink">
-          <li id="startrly">
+        <ul class="navlink">
+          <li class="startrly">
             Startrly
           </li>
-          <li>
+          <li class="trynow">
             Try Now!
           </li>
-          <li>
+          <li class="about">
             About
           </li>
         </ul>
@@ -33,48 +33,55 @@
 
 
       <section class="content">
-        <blockquote>
+        <blockquote class="style-quote">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
-        <p>
+        <p class="adjustname">
           Mx. Lorem
         </p>
       </section>
 
 
-      <section>
+      <section class="why-section content">
         <h2>Why?</h2>
         <ul>
           <li>
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Comfortable</strong>
-            <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-            </p>
+            <div>
+              <strong>Comfortable</strong>
+            
+              <p>
+                Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+              </p>
+            </div>
           </li>
           <li>
             <img src="http://via.placeholder.com/100x100" />
-            <strong>Robust</strong>
-            <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
-            </p>
+            <div>
+              <strong>Robust</strong>
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+              </p>
+            </div>
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Convenient</strong>
-            <p>
-              Itaque earum rerum hic tenetur a sapiente delectus.
-            </p>
+            <div>
+              <img src="http://via.placeholder.com/100x100" />
+              <strong>Convenient</strong>
+              <p>
+                Itaque earum rerum hic tenetur a sapiente delectus.
+              </p>
+            </div>
           </li>
         </ul>
       </section>
 
 
-      <section>
-        <blockquote>
+      <section class="content">
+        <blockquote class="style-quote">
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
-        <p>
+        <p class="adjustname">
           Mx. Ipsum
         </p>
       </section>
