--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="title-section">
           <section class="title">
             <h1>Startrly</h1>
-            <sub>A catchy tagline for a great   solution</sub>
+            <p>A catchy tagline for a great   solution</p>
             <a href="#">Some Call to Action</a>
           </section>
         </div>
