added format for wireframe layout, meet the team

--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -82,39 +82,38 @@
 
       <section>
         <h2 class= "section_header">Meet the team</h2>
-        <ul>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
+        <ul class= "team">
+          <li class= "team_box">
+            <img class= "team_img" src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+            <span class= "name" >Kari Kiwi</span>
+            <span class= "name">CFO</span>
           </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
+          <li class= "team_box">
+            <img class= "team_img" src="https://placebear.com/150/150" alt="profile for dan dragon" />
+            <span class= "name">Dan Dragon</span>
+            <span class= "name">CMO</span>
           </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
+          <li class= "team_box">
+            <img class= "team_img" src="https://placebear.com/150/150" alt="profile for chris caribou" />
+            <span class= "name">Chris Caribou</span>
+            <span class= "name">CIO</span>
           </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
+          <li class= "team_box">
+            <img class= "team_img" src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+            <span class= "name">Charles Cheetah</span>
+            <span class= "name">Board Member, CTO</span>
           </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
+          <li class= "team_box">
+            <img  class= "team_img" src="https://placebear.com/150/150" alt="profile for dee dugong" />
+            <span class= "name">Dee Dugong</span>
+            <span class= "name">Startup Enthusiast</span>
           </li>
         </ul>
       </section>
 
-
       <section>
         <h2 class= "section_header">Sponsors</h2>
-        <ul>
+        <ul class= "sponsor_box">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
