base structures established

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <section class="testimonial">
         <blockquote>
-          "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.""
+          "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
         </blockquote>
         <p>
           -Mx. Ipsum
