refactored styles some more, added a nice gradient to the link in the splash section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body >
+  <body class="dark-background">
     <div>
-      <nav>
+      <nav class="dark-background">
         <ul>
           <li id="startrly-logo" class="startrly-name">
             Startrly
@@ -25,14 +25,14 @@
       </nav>
 
 
-      <section id = "splash" class="parallax">
+      <section id = "splash" class="parallax flex-column-horizontally-centered">
         <h1 class="startrly-name">Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section class="quote" id="mx-lorem">
+      <section class="quote flex-column-horizontally-centered"" id="mx-lorem">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -42,9 +42,9 @@
       </section>
 
 
-      <section id="why"> 
+      <section  id="why"> 
         <h2 class="section-header">Why?</h2>
-        <ul>
+        <ul class="flex-row-vertically-centered">
           <li>
             <img src="http://www.placekitten.com/100/100" />
             <strong>Comfortable</strong>
@@ -70,7 +70,7 @@
       </section>
 
 
-      <section class="quote" id="mx-ipsum">
+      <section class="quote flex-column-horizontally-centered" id="mx-ipsum">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -114,7 +114,7 @@
 
       <section  id="sponsors">
         <h2 class="section-header">Sponsors</h2>
-        <ul>
+        <ul class="flex-row-vertically-centered ">
           <li>
             <img src="http://www.placepuppy.net/300/100" />
           </li>
@@ -134,7 +134,7 @@
       </section>
 
 
-      <section id="footer">
+      <section class="flex-row-vertically-centered" id="footer">
         <div class="footer-links">
           <h3>Support</h3>
           <ul>
