meet the team is finished except for spacing

--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
         <h2>Why?</h2>
         <ul id="why_list">
           <li>
-            <img src="https://www.placecage.com/c/100/100" />
+            <img src="https://www.placecage.com/100/100" />
               <strong>Comfortable</strong>
               <p>
               Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
               </p>
           </li>
           <li>
-            <img src="https://www.placecage.com/c/100/100" />
+            <img src="https://www.placecage.com/100/100" />
             <strong>Robust</strong>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
             </p>
           </li>
           <li>
-            <img src="https://www.placecage.com/c/100/100" />
+            <img src="https://www.placecage.com/100/100" />
             <strong>Convenient</strong>
             <p>
               Itaque earum rerum hic tenetur a sapiente delectus.
@@ -68,7 +68,7 @@
       </section>
 
 
-      <section class="second_quote">
+      <section>
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -80,29 +80,29 @@
 
       <section class="team_profiles">
         <h2>Meet the team</h2>
-        <ul>
+        <ul class="profile_photos">
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+            <img src="https://www.placecage.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
             <span>CFO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+            <img src="https://www.placecage.com/150/150" alt="profile for dan dragon" />
             <span>Dan Dragon</span>
             <span>CMO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+            <img src="https://www.placecage.com/150/150" alt="profile for chris caribou" />
             <span>Chris Caribou</span>
             <span>CIO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+            <img src="https://www.placecage.com/150/150" alt="profile for charles cheetah" />
             <span>Charles Cheetah</span>
             <span>Board Member, CTO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+            <img src="https://www.placecage.com/150/150" alt="profile for dee dugong" />
             <span>Dee Dugong</span>
             <span>Startup Enthusiast</span>
           </li>
