Position Why section

--- a/index.html
+++ b/index.html
@@ -46,25 +46,31 @@
         <h2>Why?</h2>
         <ul>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Comfortable</strong>
-            <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-            </p>
+            <span> 
+              <img src="http://via.placeholder.com/100x100" />
+              <strong>Comfortable</strong>
+              <p>
+                Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+              </p>
+            </span>
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Robust</strong>
-            <p>
+            <span>
+              <img src="http://via.placeholder.com/100x100" />
+              <strong>Robust</strong>
+              <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
             </p>
+          </span>
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Convenient</strong>
-            <p>
+            <span>
+              <img src="http://via.placeholder.com/100x100" />
+              <strong>Convenient</strong>
+              <p>
               Itaque earum rerum hic tenetur a sapiente delectus.
             </p>
+          </span>
           </li>
         </ul>
       </section>
