basic format for wire fram sponsor

--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -114,19 +114,19 @@
       <section>
         <h2 class= "section_header">Sponsors</h2>
         <ul class= "sponsor_box">
-          <li>
+          <li class= "sponsor">
             <img src="http://via.placeholder.com/300x100" />
           </li>
-          <li>
+          <li class= "sponsor">
             <img src="http://via.placeholder.com/250x125" />
           </li>
-          <li>
+          <li class= "sponsor">
             <img src="http://via.placeholder.com/275x70" />
           </li>
-          <li>
+          <li class= "sponsor">
             <img src="http://via.placeholder.com/250x120" />
           </li>
-          <li>
+          <li class= "sponsor">
             <img src="http://via.placeholder.com/220x100" />
           </li>
         </ul>
