More stylistic changes. Unable to legt align line items in footer

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </section>
         </div>
 
-        <div class="blockquotes">
-            <section>
+        <div id="first-border">
+            <section class="border">
                 <blockquote class="quote">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </blockquote>
@@ -47,34 +47,31 @@
         </div>
 
 
-        <section>
+        <section class="border">
             <h2 class="heading">Why?</h2>
-
-            <!-- <div class="why-images"> -->
-            <ul class="why-images">
+            <ul class="why">
                 <li>
-                    <img src="http://via.placeholder.com/100x100" />
-                    <strong class="text">Comfortable</strong>
-                    <p class="text">
+                    <img id="wave" src="http://via.placeholder.com/100x100" />
+                    <strong>Comfortable</strong>
+                    <p>
                         Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
                     </p>
                 </li>
                 <li>
                     <img src="http://via.placeholder.com/100x100" />
-                    <strong class="text">Robust</strong>
-                    <p class="text">
+                    <strong>Robust</strong>
+                    <p>
                         At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
                     </p>
                 </li>
                 <li>
                     <img src="http://via.placeholder.com/100x100" />
-                    <strong class="text">Convenient</strong>
-                    <p class="text">
+                    <strong>Convenient</strong>
+                    <p>
                         Itaque earum rerum hic tenetur a sapiente delectus.
                     </p>
                 </li>
             </ul>
-            <!-- </div> -->
         </section>
 
 
@@ -112,13 +109,13 @@
                 <div class="last-two">
                     <li>
                         <img class="circle" src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-                        <span>Charles Cheetah</span>
-                        <span>Board Member, CTO</span>
+                        <span class="name-title">Charles Cheetah</span>
+                        <span class="name-title">Board Member, CTO</span>
                     </li>
                     <li>
                         <img class="circle" src="https://placebear.com/150/150" alt="profile for dee dugong" />
-                        <span>Dee Dugong</span>
-                        <span>Startup Enthusiast</span>
+                        <span class="name-title">Dee Dugong</span>
+                        <span class="name-title">Startup Enthusiast</span>
                     </li>
                 </div>
             </ul>
@@ -147,8 +144,8 @@
         </section>
 
 
-        <section class="support">
-            <div>
+        <section class="footer">
+            <div class="support">
                 <h3>Support</h3>
                 <ul>
                     <li>
@@ -165,7 +162,7 @@
                     </li>
                 </ul>
             </div>
-            <div>
+            <div class="about">
                 <h3>About</h3>
                 <ul>
                     <li>
