finished formatting sponsors, added google font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Startrly</title>
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -112,7 +113,7 @@
       </section>
 
 
-      <section>
+      <section id="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
